
For editing language files in The Conquerors, I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819]this download[/url].[/color]

[b]Version History[/b]
Guide makers et cetera, please include the version into which your guide was written.

Version [b]2015.7.31[/b]:
-SLP graphics can be shown, excluding AoE 1 for now.
-Color variables colored according to 50500 palette.
-Two or more text files can be loaded.

Version [b]2015.7.21[/b]:
-AoK HD txt files are readable again.
-Restored editing map data for non SWGB versions.

Version [b]2015.7.6[/b]:
-Fixed a bug that prevented copying units.
-Terrain variable found in unit commands.

Version [b]2015.7.3[/b]:
-New editors are now opened from a button instead of needing to specify the amount at start.
-Improved performance of lists in units and graphics tabs.
-Easily see if a unit exists in other civilizations.

Version [b]2015.6.24[/b]:
-Adjusted defaults for AoK HD.
-Added defaults button for Forgotten Empires.
-Windows scaling support.

Version [b]2015.6.10[/b]:
-Added edit counter in status bar.
-LudiKRISly faster to add, delete and 1:1 paste items.
-First visible item stays same when using buttons.
-Removed obsolete open/save options.
-Miscellaneous improvements.

Version [b]2015.6.2[/b]:
-Recent paths fully working.
-Pressing enter forces the value into selections.
-Paste toggle between 1:1 and sequentially.
-Added recent open paths.
-Fixed bugs that messed up editing with two windows.
-Fixed fatal bug when pasting commands from AoK+ to AoE.
-Blast attack, unit trigger type, missile finds.
-Min and max floats shown nicely.

Version [b]2015.5.3[/b]:
-AoKHD language files readable.

Version [b]2015.4.27[/b]:
-Less crashing when opening another file.
-Improved terrain related tabs.

Version [b]2015.3.9[/b]:
-Fixed a crash when erasing unit damage graphics, attacks, armors and actions.
-Min and max sizes for windows.
-Improved unit search filters.

Version [b]2015.1.26[/b]: